made pr review chnages
